<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.VerificationOTP"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvverifyOTP"
            android:text="@string/verify_otp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="center"
            />
       <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_failedotp"
            android:text="@string/failed_otp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtotp"
            android:hint="@string/hint_otp"
            android:inputType="number"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnverify"
            android:id="@+id/btnotpverify"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tvresndOTP"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/resend_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tvresndOTP"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>
</LinearLayout>