<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".function.ContactUs"

    android:background="#F1F2F3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent">
        <TextView android:id="@+id/address1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:maxLines="6"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:singleLine="false"
            android:text="@string/address" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:autoLink="email"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/EmailId"
        android:autoLink="email"
        />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:text="@string/feedback"/>



        <EditText android:inputType="textMultiLine"
        android:lines="8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minLines="6"
            android:layout_marginTop="15dp"
        android:gravity="top|left"
            android:background="#FFFFFF"
        android:maxLines="10"

        android:scrollbars="vertical"
        />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:background="#5e77ca"
            android:text="Submit"/>
    </LinearLayout>

</ScrollView>