<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".function.Updatekyc">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="35"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/upload_doc"
            android:textSize="15sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:id="@+id/btn_uploaddocs"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="Upload Docs"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".3"
                android:id="@+id/btn_upload_info"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/upload_info"/>
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="20dp"
            android:text="@string/share_doc"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/btn_fetchdoc"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:text="@string/btn_fetch"
            android:textSize="15sp"/>
    </LinearLayout>


</LinearLayout>